force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <description>Stores job applications on vacancies. Helps to log and manage the entire job application lifecycle.</description>
    <label>Job Application</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>