force-app/main/default/objects/Job_Application__c/fields/Annual_Take_home_Pay__c.field-meta.xml
<CustomField>
    <fullName>Annual_Take_home_Pay__c</fullName>
    <description>The estimated value of the annual Take-home Paycheck.</description>
    <label>Annual Take-home Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>