force-app/main/default/objects/Job_Application__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Stores the name of the company where the job application is being sent.</description>
    <label>Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Applications</relationshipLabel>
    <relationshipName>Job_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>