force-app/main/default/objects/Job_Application__c/fields/Filing_status__c.field-meta.xml
<CustomField>
    <fullName>Filing_status__c</fullName>
    <description>The Tax Filing status for which the estimation was performed.</description>
    <label>Filing status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>