force-app/main/default/objects/Job_Application__c/fields/Jooble_Id__c.field-meta.xml
<CustomField>
    <fullName>Jooble_Id__c</fullName>
    <description>External Id on the Jooble Job Board.</description>
    <externalId>true</externalId>
    <label>Jooble Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>