force-app/main/default/objects/Job_Application__c/fields/Salary_Info__c.field-meta.xml
<CustomField>
    <fullName>Salary_Info__c</fullName>
    <description>Text information about salary value. Also contains information from the Jooble Job Board.</description>
    <label>Salary (Info)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>