force-app/main/default/objects/Job_Application__c/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <description>The yearly Social Security liability.</description>
    <label>Social Security</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>