force-app/main/default/objects/Job_Application__c/fields/Work_Model__c.field-meta.xml
<CustomField>
    <fullName>Work_Model__c</fullName>
    <description>Indicates the working model for the position.</description>
    <label>Work Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>